0.4.3
 - ci: fix coverage stats
0.4.2
 - maintenance release
0.4.1
 - fix: update MANIFEST.in (missing trailer image)
0.4.0
 - enh: added promoted.html template with DCOR tiles artwork
 - ref: moved branding to dcor_control
 - tests: use vagrant for tests
0.3.9
 - fix: i18-hack did not work properly
0.3.8
 - maintenance release
0.3.7
 - ci: migrate to GH Actions
 - build: use install_requires instead of requirements.txt
0.3.6
 - enh: added green DCOR-med icon
0.3.5
 - fix: include Lato fonts
0.3.4
 - fix: do not use a brand icon for Circles
 - ref: use solid icons
0.3.3
 - fix: manifest did not include artwork
0.3.2
 - maintenance release
0.3.1
 - maintenance release
0.3.0
 - initial open-sourced release